--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  archive: ^3.3.1
+  csv: ^5.0.1
   flutter:
     sdk: flutter
   flutter_highlight: ^0.7.0
