--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "gtfs_realtime_inspector",
-    "short_name": "gtfs_realtime_inspector",
+    "name": "GTFS Realtime inspector",
+    "short_name": "GTFS Realtime inspector",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#3F51B5",
+    "theme_color": "#3F51B5",
     "description": "GTFS Realtime inspector",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
