--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_highlight: ^0.7.0
   flutter_map: ^3.0.0
+  go_router: ^5.1.0
   gtfs_realtime_bindings: ^1.0.1
   http: ^0.13.5
   latlong2: ^0.8.1
