--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_form_bloc: ^0.30.1
   flutter_highlight: ^0.7.0
   flutter_map: ^3.0.0
   go_router: ^5.1.0
