--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_form_bloc: ^0.30.1
   flutter_highlight: ^0.7.0
   flutter_map: ^3.0.0
+  freezed_annotation: ^2.2.0
   go_router: ^5.1.0
   gtfs_realtime_bindings: ^1.0.1
   http: ^0.13.5
@@ -43,6 +44,7 @@ dependencies:
 
 
 dev_dependencies:
+  build_runner: ^2.3.0
   flutter_test:
     sdk: flutter
 
@@ -51,6 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  freezed: ^2.2.0
   lint: ^1.10.0
 
 # For information on the generic Dart part of this file, see the
