--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   archive: ^3.3.1
   async: ^2.9.0
+  collection: ^1.17.0
   csv: ^5.0.1
   flutter:
     sdk: flutter
