--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^5.1.0
   gtfs_realtime_bindings: ^1.0.1
   http: ^0.13.5
+  intl: ^0.17.0
   latlong2: ^0.8.1
   split_view: ^3.2.1
   url_launcher: ^6.1.6
