--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_form_bloc: ^0.30.1
   flutter_highlight: ^0.7.0
+  flutter_localizations:
+    sdk: flutter
   flutter_map: ^3.0.0
   flutter_map_marker_cluster: ^1.0.1
   freezed_annotation: ^2.2.0
@@ -46,9 +48,6 @@ dependencies:
   latlong2: ^0.8.1
   split_view: ^3.2.1
   url_launcher: ^6.1.6
-
-dependency_overrides:
-  collection: ^1.17.0
 
 dev_dependencies:
   build_runner: ^2.3.0
