--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,30 +27,33 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  archive: ^3.3.1
-  async: ^2.9.0
-  collection: ^1.17.0
-  csv: ^5.0.1
+  archive: ^3.3.7
+  async: ^2.11.0
+  collection: ^1.17.1
+  csv: ^5.0.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
   flutter_form_bloc: ^0.30.1
   flutter_highlight: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  flutter_map: ^3.0.0
-  flutter_map_marker_cluster: ^1.0.1
+  flutter_map: ^3.1.0
+  flutter_map_marker_cluster: ^1.1.0
   freezed_annotation: ^2.2.0
-  go_router: ^5.1.0
+  go_router: ^7.0.1
   gtfs_realtime_bindings: ^1.0.1
-  http: ^0.13.5
-  intl: ^0.17.0
+  http: ^0.13.6
+  intl: ^0.18.0
   latlong2: ^0.8.1
   split_view: ^3.2.1
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.11
+
+dependency_overrides:
+  intl: ^0.18.1
 
 dev_dependencies:
-  build_runner: ^2.3.0
+  build_runner: ^2.4.2
   flutter_test:
     sdk: flutter
 
@@ -59,8 +62,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  freezed: ^2.2.0
-  lint: ^1.10.0
+  freezed: ^2.3.3
+  lint: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
