--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -44,7 +44,7 @@ jobs:
   deploy:
     name: Deploy page
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_web
     concurrency: deploy-github-page
     if: github.ref == 'refs/heads/main'
     timeout-minutes: 5
